# Architectural-Template-Qt-QML

./: CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  resource.qrc
cmake/: TranslationUtils.cmake
debian/: CMakeLists.txt
deploy/: Dockerfile-Qt-6-5  Dockerfile-Qt-6-5-CPack
doc/: README.md
qml/Common/: Colors.qml  Consts.qml  Enums.qml  Fonts.qml  RegExps.qml  Values.qml  qmldir
qml/Logic/: Functions.js  qmldir
qml/Model/: qmldir
qml/Models/: LanguageListModel.qml  qmldir
qml/Pages/: PageLoader.qml  qmldir
qml/Pages/Login/: AuthenticationPage.qml  AuthenticationPage_Form.ui.qml
qml/Pages/Menu/: MainMenuPage.qml  MainMenuPage_Form.ui.qml
qml/Pages/Setting/: SettingPage.qml  SettingPage_Form.ui.qml
qml/Pages/Splash/: SplashPage.qml  SplashPage_Form.ui.qml
qml/Screens/: ScreenLoader.qml  qmldir
qml/Screens/Login/: AuthenticationScreen.qml  AuthenticationScreen_Form.ui.qml
qml/Screens/Splash/: SplashScreen.qml  SplashScreen_Form.ui.qml
qml/Styles/ATQQStyle/: ApplicationWindow.qml  ComboBox.qml  Label.qml  RoundButton.qml  TextField.qml  qmldir
qml/Styles/Themes/: AbstractTheme.qml  BlueTheme.qml  DarkTheme.qml  LightTheme.qml  PurpleTheme.qml  RedTheme.qml  qmldir
res/languages/: ATQQ_en_US.qm  ATQQ_en_US.ts  ATQQ_ru_RU.qm  ATQQ_ru_RU.ts
src/: CMakeLists.txt
src/controller/: CMakeLists.txt  LanguageController.cpp  LoggingController.cpp
src/core/: Application.cpp  CMakeLists.txt
src/view-model/: AuthenticationViewModel.cpp  CMakeLists.txt  QmlRegisterType.cpp  TopPanelViewModel.cpp
tests/: CMakeLists.txt
tests/qml-tests/: CMakeLists.txt  main.cpp  tst_LanguageListModel.qml
tests/qmltests/: CMakeLists.txt
(+17 files in other folders)
